fix(css): Dashboad height made rooms flickering

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 :host {
-  height: 100%;
+  height: calc(100vh - 130px);
   display: block;
 }
 
